--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#FF0000"
+        android:background="#FFF"
         android:layout_weight="1">   	    
     </android.support.v4.view.ViewPager>
     
