--- a/res/layout/fragment_home_page.xml
+++ b/res/layout/fragment_home_page.xml
@@ -4,11 +4,29 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 	
+    <RelativeLayout 
+        android:id="@+id/id_top_part"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@color/floralwhite">
+        
+        <EditText 
+            android:id="@+id/id_searchbar"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:drawableLeft="@drawable/search_icon"
+            android:hint="@string/search_str"
+            android:focusable="false"
+            android:paddingLeft="50dp"
+            android:textColorHint="#20000000"/>
+        
+    </RelativeLayout>
     <TextView 
         android:id="@+id/id_page_mask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/home_page"/>
-
+	
 </LinearLayout>
