--- a/res/layout/fragment_home_page.xml
+++ b/res/layout/fragment_home_page.xml
@@ -28,4 +28,39 @@
         
     </RelativeLayout>
 	
+    <ScrollView 
+        android:id="@+id/scrollview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+        <LinearLayout 
+            android:id="@+id/id_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            <FrameLayout 
+            	android:id="@+id/id_recommendation"
+            	android:layout_width="match_parent"
+            	android:layout_height="100dp">
+            
+                <android.support.v4.view.ViewPager 
+    		    	android:id="@+id/id_viewPager"
+    		    	android:layout_width="match_parent"
+    		    	android:layout_height="60dp"/> 
+    		    
+                <LinearLayout 
+                    android:id="@+id/id_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="15dp"
+                    android:layout_gravity="bottom|right"
+                    android:orientation="horizontal">
+                    
+                </LinearLayout>
+                
+        	</FrameLayout>
+         		
+        </LinearLayout>
+    
+    </ScrollView>
+    
 </LinearLayout>
