--- a/res/layout/fragment_home_page.xml
+++ b/res/layout/fragment_home_page.xml
@@ -41,12 +41,12 @@
             <FrameLayout 
             	android:id="@+id/id_recommendation"
             	android:layout_width="match_parent"
-            	android:layout_height="100dp">
+            	android:layout_height="190dp">
             
                 <android.support.v4.view.ViewPager 
     		    	android:id="@+id/id_viewPager"
     		    	android:layout_width="match_parent"
-    		    	android:layout_height="60dp"/> 
+    		    	android:layout_height="match_parent"/> 
     		    
                 <LinearLayout 
                     android:id="@+id/id_indicator"
@@ -58,7 +58,28 @@
                 </LinearLayout>
                 
         	</FrameLayout>
-         		
+         	
+            <LinearLayout 
+                android:id="@+id/id_rank"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:orientation="horizontal">
+                
+            	<ImageView
+            	    android:id="@+id/id_rank1"
+            	    android:layout_width="0dp"
+            	    android:layout_height="match_parent"
+            	    android:layout_weight="1"/>
+            	
+            	<LinearLayout 
+            	    android:layout_width="0dp"
+            	    android:layout_height="match_parent"
+            	    android:layout_weight="1"
+            	    android:orientation="vertical">
+            	    
+            	</LinearLayout>
+            </LinearLayout>
+            	
         </LinearLayout>
     
     </ScrollView>
