--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -36,5 +36,54 @@
 		
     </LinearLayout>
 	
-
+	<ScrollView 
+	    android:id="@+id/id_scrollview"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:scrollbars="none">
+	    
+	    <LinearLayout 
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:orientation="vertical">
+	        
+	        <FrameLayout 
+	            android:layout_width="match_parent"
+	            android:layout_height="100dp">
+	            
+	            <View 
+	                android:layout_width="match_parent"
+	                android:layout_height="40dp"
+	                android:background="#007aff"/>
+	            <LinearLayout 
+	                android:layout_width="match_parent"
+	                android:layout_height="100dp"
+	                android:orientation="horizontal">
+	                <Button 
+	                    android:id="@+id/id_collectbtn"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:drawableTop="@drawable/collection_icon"
+	                    android:text="4.2"
+	                    android:background="@null"
+	                    android:gravity="center_horizontal"/>
+	                <ImageView 
+	                    android:id="@+id/id_img"
+	                    android:layout_width="110dp"
+	                    android:layout_height="wrap_content"
+	                    android:src="@drawable/pic4"
+	                    android:scaleType="fitXY"/>
+	                <Button 
+	                    android:id="@+id/id_levelbtn"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:drawableTop="@drawable/fire_icon"
+	                    android:text="B"
+	                    android:background="@null"
+	                    android:gravity="center_horizontal"/>
+	            </LinearLayout>
+	        </FrameLayout>
+	    </LinearLayout>
+	    
+	</ScrollView>
 </LinearLayout>
