--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -47,42 +47,58 @@
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical">
 	        
-	        <FrameLayout 
+	        <FrameLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="100dp">
+	            android:layout_height="230dp">
 	            
 	            <View 
 	                android:layout_width="match_parent"
-	                android:layout_height="40dp"
+	                android:layout_height="100dp"
 	                android:background="#007aff"/>
 	            <LinearLayout 
 	                android:layout_width="match_parent"
-	                android:layout_height="100dp"
+	                android:layout_height="match_parent"
 	                android:orientation="horizontal">
 	                <Button 
 	                    android:id="@+id/id_collectbtn"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
+	                    android:layout_marginTop="20dp"
 	                    android:drawableTop="@drawable/collection_icon"
 	                    android:text="4.2"
 	                    android:background="@null"
 	                    android:gravity="center_horizontal"/>
 	                <ImageView 
 	                    android:id="@+id/id_img"
-	                    android:layout_width="110dp"
+	                    android:layout_width="0dp"
 	                    android:layout_height="wrap_content"
-	                    android:src="@drawable/pic4"
-	                    android:scaleType="fitXY"/>
+	                    android:paddingTop="10dp"
+	                    android:layout_weight="1"
+	                    android:layout_gravity="center_horizontal"
+	                    android:src="@drawable/pic4"/>
 	                <Button 
 	                    android:id="@+id/id_levelbtn"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
+	                    android:layout_marginTop="20dp"
 	                    android:drawableTop="@drawable/fire_icon"
 	                    android:text="B"
 	                    android:background="@null"
 	                    android:gravity="center_horizontal"/>
 	            </LinearLayout>
 	        </FrameLayout>
+	        
+	        <TextView 
+	            android:id="@+id/id_name"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_horizontal"/>
+	        <TextView 
+	            android:id="@+id/id_autor"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="center_horizontal"/>
+	        
 	    </LinearLayout>
 	    
 	</ScrollView>
