--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -49,7 +49,7 @@
 	        
 	        <FrameLayout
 	            android:layout_width="match_parent"
-	            android:layout_height="230dp">
+	            android:layout_height="180dp">
 	            
 	            <View 
 	                android:layout_width="match_parent"
@@ -60,7 +60,7 @@
 	                android:layout_height="match_parent"
 	                android:orientation="horizontal">
 	                <Button 
-	                    android:id="@+id/id_collectbtn"
+	                    android:id="@+id/id_evaluatebtn"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginTop="20dp"
@@ -92,17 +92,37 @@
 	            android:id="@+id/id_name"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_horizontal"/>
+	            android:gravity="center_horizontal"
+	            android:text="书名"/>
 	        <TextView 
 	            android:id="@+id/id_autor"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="center_horizontal"/>
+	            android:gravity="center_horizontal"
+	            android:text="作者"/>
 	        <LinearLayout 
 	            android:layout_width="match_parent"
-	            android:layout_height="wrap_content"
+	            android:layout_height="45dp"
 	            android:orientation="horizontal">
-	            <Button />
+	            <Button
+	                android:id="@+id/id_collectionbtn"
+	                android:layout_width="0dp"
+	                android:layout_height="45dp"
+	                android:layout_marginLeft="17dp"
+	                android:layout_weight="1"
+	                android:background="@drawable/shape_round_rectangle"
+	                android:text="@string/add_collection"/>
+	            <View 
+	                android:layout_width="17dp"
+	                android:layout_height="match_parent"/>
+	            <Button 
+	                android:id="@+id/id_readbtn"
+	                android:layout_width="0dp"
+	                android:layout_height="45dp"
+	                android:layout_weight="1"
+	                android:layout_marginRight="17dp"
+	                android:background="@drawable/shape_round_rectangle"
+	                android:text="@string/continue_read"/>
 	        </LinearLayout>
 	    </LinearLayout>
 	    
