--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -17,6 +17,7 @@
             android:drawableLeft="@drawable/backicon"
             android:gravity="center_vertical"
             android:background="@null"
+            android:textColor="@color/blue"
             android:text="@string/back"/>
 		<TextView 
 		    android:id="@+id/id_title"
@@ -32,6 +33,7 @@
 		    android:layout_height="match_parent"
 		    android:gravity="center_vertical"
 		    android:paddingRight="5dp"
+		    android:textColor="@color/blue"
 		    android:text="@string/download"/>
 		
     </LinearLayout>
@@ -54,7 +56,7 @@
 	            <View 
 	                android:layout_width="match_parent"
 	                android:layout_height="100dp"
-	                android:background="#007aff"/>
+	                android:background="@color/blue"/>
 	            <LinearLayout 
 	                android:layout_width="match_parent"
 	                android:layout_height="match_parent"
@@ -66,6 +68,7 @@
 	                    android:layout_marginTop="20dp"
 	                    android:drawableTop="@drawable/collection_icon"
 	                    android:text="4.2"
+	                    android:textColor="@color/white"
 	                    android:background="@null"
 	                    android:gravity="center_horizontal"/>
 	                <ImageView 
@@ -83,6 +86,7 @@
 	                    android:layout_marginTop="20dp"
 	                    android:drawableTop="@drawable/fire_icon"
 	                    android:text="B"
+	                    android:textColor="@color/white"
 	                    android:background="@null"
 	                    android:gravity="center_horizontal"/>
 	            </LinearLayout>
@@ -99,6 +103,7 @@
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
 	            android:gravity="center_horizontal"
+	            android:textColor="@color/gray"
 	            android:text="作者"/>
 	        <LinearLayout 
 	            android:layout_width="match_parent"
@@ -111,6 +116,7 @@
 	                android:layout_marginLeft="17dp"
 	                android:layout_weight="1"
 	                android:background="@drawable/shape_round_rectangle"
+	                android:textColor="@color/white"
 	                android:text="@string/add_collection"/>
 	            <View 
 	                android:layout_width="17dp"
@@ -122,7 +128,101 @@
 	                android:layout_weight="1"
 	                android:layout_marginRight="17dp"
 	                android:background="@drawable/shape_round_rectangle"
+	                android:textColor="@color/white"
 	                android:text="@string/continue_read"/>
+	        </LinearLayout>
+	        
+	        <TextView 
+	            android:id="@+id/id_introduction"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:singleLine="false"
+	            android:paddingLeft="30dp"
+	            android:paddingRight="30dp"
+	            android:text="introduction"
+	            android:textColor="@color/black_3"/>
+	        
+	        <LinearLayout 
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="horizontal"
+	            android:paddingLeft="30dp"
+	            android:paddingRight="30dp">
+	            <LinearLayout 
+	                android:layout_width="0dp"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:gravity="center_horizontal"
+	                android:orientation="vertical">
+	                <ImageView 
+	                    android:id="@+id/id_sharedbtn"
+	                    android:layout_width="match_parent"
+	                    android:layout_height="match_parent"
+	                    android:src="@drawable/sharebtn"
+	                    android:scaleType="fitCenter"/>
+	                <TextView
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content" 
+	                    android:textColor="@color/black_3"
+	                    android:text="@string/shared"/>
+	            </LinearLayout>
+	            <LinearLayout 
+	                android:layout_width="0dp"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:layout_marginLeft="20dp"
+	                android:gravity="center_horizontal"
+	                android:orientation="vertical">
+	                <ImageView 
+	                    android:id="@+id/id_deliverbtn"
+	                    android:layout_width="match_parent"
+	                    android:layout_height="match_parent"
+	                    android:src="@drawable/deliverbtn"
+	                    android:scaleType="fitCenter"/>
+	                <TextView
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:textColor="@color/black_3"
+	                    android:text="@string/deliver"/>
+	            </LinearLayout>
+	            <LinearLayout 
+	                android:layout_width="0dp"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:layout_marginLeft="20dp"
+	                android:gravity="center_horizontal"
+	                android:orientation="vertical">
+	                <ImageView 
+	                    android:id="@+id/id_playbtn"
+	                    android:layout_width="match_parent"
+	                    android:layout_height="match_parent"
+	                    android:src="@drawable/playbtn"
+	                    android:scaleType="fitCenter"/>
+	                <TextView
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:textColor="@color/black_3"
+	                    android:text="@string/anim"/>
+	            </LinearLayout>
+	            <LinearLayout 
+	                android:layout_width="0dp"
+	                android:layout_height="wrap_content"
+	                android:layout_weight="1"
+	                android:layout_marginLeft="20dp"
+	                android:gravity="center_horizontal"
+	                android:orientation="vertical">
+	                <ImageView 
+	                    android:id="@+id/id_commentbtn"
+	                    android:layout_width="match_parent"
+	                    android:layout_height="match_parent"
+	                    android:src="@drawable/commentbtn"
+	                    android:scaleType="fitCenter"/>
+	                <TextView
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:textColor="@color/black_3"
+	                    android:text="@string/comment"/>
+	            </LinearLayout>
 	        </LinearLayout>
 	    </LinearLayout>
 	    
