--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -24,7 +24,7 @@
 		    android:text="@string/default_str"
 		    android:layout_width="0dp"
 		    android:layout_height="match_parent"
-		    android:paddingRight="15dp"
+		    android:paddingRight="30dp"
 		    android:layout_weight="1"
 		    android:gravity="center"/>
 		<TextView 
@@ -66,6 +66,7 @@
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginTop="20dp"
+	                    android:layout_marginLeft="20dp"
 	                    android:drawableTop="@drawable/collection_icon"
 	                    android:text="4.2"
 	                    android:textColor="@color/white"
@@ -84,6 +85,7 @@
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginTop="20dp"
+	                    android:layout_marginRight="20dp"
 	                    android:drawableTop="@drawable/fire_icon"
 	                    android:text="B"
 	                    android:textColor="@color/white"
@@ -103,7 +105,7 @@
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
 	            android:gravity="center_horizontal"
-	            android:textColor="@color/gray"
+	            android:textColor="@color/gray_6"
 	            android:text="作者"/>
 	        <LinearLayout 
 	            android:layout_width="match_parent"
@@ -140,7 +142,7 @@
 	            android:paddingLeft="30dp"
 	            android:paddingRight="30dp"
 	            android:text="introduction"
-	            android:textColor="@color/black_3"/>
+	            android:textColor="@color/gray_3"/>
 	        
 	        <LinearLayout 
 	            android:layout_width="match_parent"
@@ -163,7 +165,7 @@
 	                <TextView
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content" 
-	                    android:textColor="@color/black_3"
+	                    android:textColor="@color/gray_3"
 	                    android:text="@string/shared"/>
 	            </LinearLayout>
 	            <LinearLayout 
@@ -182,7 +184,7 @@
 	                <TextView
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/black_3"
+	                    android:textColor="@color/gray_3"
 	                    android:text="@string/deliver"/>
 	            </LinearLayout>
 	            <LinearLayout 
@@ -201,7 +203,7 @@
 	                <TextView
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/black_3"
+	                    android:textColor="@color/gray_3"
 	                    android:text="@string/anim"/>
 	            </LinearLayout>
 	            <LinearLayout 
@@ -220,10 +222,33 @@
 	                <TextView
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
-	                    android:textColor="@color/black_3"
+	                    android:textColor="@color/gray_3"
 	                    android:text="@string/comment"/>
 	            </LinearLayout>
 	        </LinearLayout>
+	        <View 
+	            android:layout_width="match_parent"
+	            android:layout_height="1dp"
+	            android:background="@color/gray_9"/>
+	        <TextView 
+	            android:id="@+id/id_last_time"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="right"
+	            android:textColor="@color/gray_6"
+	            android:text="最后更新："
+	            android:layout_marginRight="35dp"/>
+	        <com.xiaoxiao.view.MyGridView 
+	            android:id="@+id/id_chapter_container"
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginLeft="20dp"
+	            android:layout_marginRight="20dp"
+	            android:numColumns="4"
+	            android:verticalSpacing="10dp"
+	            android:horizontalSpacing="10dp">
+	            
+	        </com.xiaoxiao.view.MyGridView>
 	    </LinearLayout>
 	    
 	</ScrollView>
