--- a/res/layout/layout_pic_with_text.xml
+++ b/res/layout/layout_pic_with_text.xml
@@ -7,7 +7,7 @@
         android:id="@+id/id_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitCenter"/>
 	
     <TextView 
         android:id="@+id/id_name"
