--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusableInTouchMode="true"
     android:orientation="vertical" >
     
    <LinearLayout 
@@ -11,28 +12,29 @@
         
         <Button
             android:id="@+id/id_backbtn"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:paddingLeft="5dp"
             android:drawableLeft="@drawable/backicon"
             android:gravity="center_vertical"
             android:background="@null"
             android:textColor="@color/blue"
+            android:drawablePadding="2dp"
             android:text="@string/back"/>
 		<TextView 
 		    android:id="@+id/id_title"
 		    android:text="@string/default_str"
 		    android:layout_width="0dp"
 		    android:layout_height="match_parent"
-		    android:paddingRight="30dp"
 		    android:layout_weight="1"
+		    android:layout_gravity="center_horizontal"
 		    android:gravity="center"/>
 		<TextView 
 		    android:id="@+id/id_downloadbtn"
-		    android:layout_width="wrap_content"
+		    android:layout_width="50dp"
 		    android:layout_height="match_parent"
-		    android:gravity="center_vertical"
-		    android:paddingRight="5dp"
+		    android:gravity="center_vertical|right"
+		    android:paddingRight="10dp"
 		    android:textColor="@color/blue"
 		    android:text="@string/download"/>
 		
@@ -57,67 +59,79 @@
 	                android:layout_width="match_parent"
 	                android:layout_height="100dp"
 	                android:background="@color/blue"/>
-	            <LinearLayout 
+	            <RelativeLayout 
 	                android:layout_width="match_parent"
-	                android:layout_height="match_parent"
-	                android:orientation="horizontal">
-	                <Button 
+	                android:layout_height="match_parent">
+					
+	                <ImageView
+	                    android:id="@+id/id_img"
+	                    android:layout_width="wrap_content"
+	                    android:layout_height="wrap_content"
+	                    android:layout_centerInParent="true"
+	                    android:layout_gravity="center_horizontal"
+	                    android:paddingTop="10dp"
+	                    android:src="@drawable/pic4" />
+	                
+	                <Button
 	                    android:id="@+id/id_evaluatebtn"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
+	                    android:layout_marginRight="30dp"
 	                    android:layout_marginTop="20dp"
-	                    android:layout_marginLeft="20dp"
-	                    android:drawableTop="@drawable/collection_icon"
-	                    android:text="4.2"
-	                    android:textColor="@color/white"
+	                    android:layout_toLeftOf="@id/id_img"
 	                    android:background="@null"
-	                    android:gravity="center_horizontal"/>
-	                <ImageView 
-	                    android:id="@+id/id_img"
-	                    android:layout_width="0dp"
-	                    android:layout_height="wrap_content"
-	                    android:paddingTop="10dp"
-	                    android:layout_weight="1"
-	                    android:layout_gravity="center_horizontal"
-	                    android:src="@drawable/pic4"/>
-	                <Button 
-	                    android:id="@+id/id_levelbtn"
+	                    android:drawableTop="@drawable/collection_icon"
+	                    android:gravity="center_horizontal"
+	                    android:text="4.2"
+	                    android:textColor="@color/white" />
+
+	                <Button
+	                    android:id="@+id/id_giftbtn"
 	                    android:layout_width="wrap_content"
 	                    android:layout_height="wrap_content"
+	                    android:layout_alignParentLeft="false"
+	                    android:layout_marginLeft="30dp"
 	                    android:layout_marginTop="20dp"
-	                    android:layout_marginRight="20dp"
-	                    android:drawableTop="@drawable/fire_icon"
-	                    android:text="B"
-	                    android:textColor="@color/white"
+	                    android:layout_toRightOf="@id/id_img"
 	                    android:background="@null"
-	                    android:gravity="center_horizontal"/>
-	            </LinearLayout>
+	                    android:drawableTop="@drawable/gift_icon"
+	                    android:gravity="center_horizontal"
+	                    android:text="领取"
+	                    android:textColor="@color/white" />
+
+	            </RelativeLayout>
 	        </FrameLayout>
 	        
-	        <TextView 
+	        <TextView
 	            android:id="@+id/id_name"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
+	            android:layout_marginTop="10dp"
 	            android:gravity="center_horizontal"
-	            android:text="书名"/>
-	        <TextView 
+	            android:text="书名" />
+
+	        <TextView
 	            android:id="@+id/id_autor"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
+	            android:layout_marginTop="5dp"
 	            android:gravity="center_horizontal"
-	            android:textColor="@color/gray_6"
-	            android:text="作者"/>
-	        <LinearLayout 
+	            android:text="作者"
+	            android:textColor="@color/gray_6" />
+
+	        <LinearLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="45dp"
-	            android:orientation="horizontal">
+	            android:layout_marginTop="10dp"
+	            android:orientation="horizontal" >
+
 	            <Button
 	                android:id="@+id/id_collectionbtn"
 	                android:layout_width="0dp"
 	                android:layout_height="45dp"
 	                android:layout_marginLeft="17dp"
 	                android:layout_weight="1"
-	                android:background="@drawable/shape_round_rectangle"
+	                android:background="@drawable/shape_button_blue_bg"
 	                android:textColor="@color/white"
 	                android:text="@string/add_collection"/>
 	            <View 
@@ -129,27 +143,46 @@
 	                android:layout_height="45dp"
 	                android:layout_weight="1"
 	                android:layout_marginRight="17dp"
-	                android:background="@drawable/shape_round_rectangle"
+	                android:background="@drawable/shape_button_green_bg"
 	                android:textColor="@color/white"
 	                android:text="@string/continue_read"/>
 	        </LinearLayout>
 	        
-	        <TextView 
-	            android:id="@+id/id_introduction"
+	        <LinearLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
-	            android:singleLine="false"
-	            android:paddingLeft="30dp"
-	            android:paddingRight="30dp"
-	            android:text="introduction"
-	            android:textColor="@color/gray_3"/>
-	        
-	        <LinearLayout 
+	            android:layout_marginTop="10dp"
+	            android:orientation="vertical" >
+
+	          	<TextView 
+		            android:id="@+id/id_introduction"
+		            android:layout_width="match_parent"
+		            android:layout_height="wrap_content"
+		            android:singleLine="false"
+		            android:paddingLeft="20dp"
+		            android:paddingRight="20dp"
+		            android:text="introduction"
+		            android:textColor="@color/gray_3"/>
+
+	          	<ImageView
+	          	    android:id="@+id/id_more_btn"
+	          	    android:layout_width="wrap_content"
+	          	    android:layout_height="wrap_content"
+	          	    android:layout_gravity="right"
+	          	    android:layout_marginRight="20dp"
+	          	    android:layout_marginTop="2dp"
+	          	    android:src="@drawable/arrow_down" />
+
+	        </LinearLayout>
+
+	        <LinearLayout
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
+	            android:layout_marginTop="10dp"
 	            android:orientation="horizontal"
 	            android:paddingLeft="30dp"
-	            android:paddingRight="30dp">
+	            android:paddingRight="30dp" >
+
 	            <LinearLayout 
 	                android:layout_width="0dp"
 	                android:layout_height="wrap_content"
@@ -226,24 +259,30 @@
 	                    android:text="@string/comment"/>
 	            </LinearLayout>
 	        </LinearLayout>
-	        <View 
+
+	        <View
 	            android:layout_width="match_parent"
 	            android:layout_height="1dp"
-	            android:background="@color/gray_9"/>
-	        <TextView 
+	            android:layout_marginTop="10dp"
+	            android:background="@color/gray_9" />
+
+	        <TextView
 	            android:id="@+id/id_last_time"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_gravity="right"
-	            android:textColor="@color/gray_6"
+	            android:layout_gravity="center_vertical|right"
+	            android:layout_marginRight="35dp"
+	            android:layout_marginTop="10dp"
 	            android:text="最后更新："
-	            android:layout_marginRight="35dp"/>
+	            android:textColor="@color/gray_6" />
+
 	        <com.xiaoxiao.view.MyGridView 
 	            android:id="@+id/id_chapter_container"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
 	            android:layout_marginLeft="20dp"
 	            android:layout_marginRight="20dp"
+	            android:layout_marginTop="10dp"
 	            android:numColumns="4"
 	            android:verticalSpacing="10dp"
 	            android:horizontalSpacing="10dp">
