--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -2,10 +2,17 @@
 
 <resources>
 
-	<color name="blue">#007aff</color>
+	<color name="blue">#007aff</color>  <!-- 文字颜色 -->
+	<color name="blue_button">#077bfb</color> <!--按钮颜色  -->
+	
 	<color name="white">#fff</color>
+	
 	<color name="black">#000</color>
+	
 	<color name="gray_6">#666666</color>
 	<color name="gray_3">#333333</color>
 	<color name="gray_9">#999999</color>
+	<color name="gray_light">#b2b2b2</color>
+	
+	<color name="green_button">#4ca634</color>
 </resources>
