--- a/res/layout/activity_cartoon_detail_page.xml
+++ b/res/layout/activity_cartoon_detail_page.xml
@@ -276,7 +276,7 @@
 	            android:text="最后更新："
 	            android:textColor="@color/gray_6" />
 
-	        <com.xiaoxiao.view.MyGridView 
+	        <com.xiaoxiao.virgo.view.MyGridView 
 	            android:id="@+id/id_chapter_container"
 	            android:layout_width="match_parent"
 	            android:layout_height="wrap_content"
@@ -288,7 +288,7 @@
 	            android:verticalSpacing="10dp"
 	            android:horizontalSpacing="10dp">
 	            
-	        </com.xiaoxiao.view.MyGridView>
+	        </com.xiaoxiao.virgo.view.MyGridView>
 	        
 	      	<View 
 	      	    android:layout_width="match_parent"
