--- a/res/layout/layout_gridview_with_title.xml
+++ b/res/layout/layout_gridview_with_title.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:textColor="#000"/>
     
-    <com.xiaoxiao.view.MyGridView 
+    <com.xiaoxiao.virgo.view.MyGridView 
         android:id="@+id/id_gridview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
