--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -28,7 +28,7 @@
 	    <item name="android:layout_marginBottom">1dp</item>
 	    <item name="android:drawablePadding">2dp</item>
 	    <item name="android:textSize">8sp</item>
-	    <item name="android:textColor">#b2b2b2</item>
+	    <item name="android:textColor">@drawable/selector_nav_text_color</item>
 	</style>
 
 </resources>
