--- a/res/layout/fragment_rank_page.xml
+++ b/res/layout/fragment_rank_page.xml
@@ -31,7 +31,7 @@
 	
 	<FrameLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" 
+	    android:layout_height="wrap_content" 
 	    android:layout_below="@id/id_top_part">
 	    <TabHost
 	        android:id="@+id/id_tabhost"
