--- a/res/layout/layout_item_rank.xml
+++ b/res/layout/layout_item_rank.xml
@@ -1,38 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" 
     android:gravity="center_vertical">
-	<ImageView 
-	    android:id="@+id/id_img"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"/>    
-	<LinearLayout 
-	    android:layout_width="wrap_content"
-	    android:layout_height="match_parent"
-	    android:orientation="vertical">
-	    <TextView 
-	        android:id="@+id/id_name"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textColor="@color/black"
-	        android:text="@string/default_str"/>
-	    <TextView 
-	        android:id="@+id/id_autor"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textColor="@color/gray_6"
-	        android:text="@string/default_str"/>
-	    <TextView 
-	        android:id="@+id/id_state"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:textColor="@color/gray_6"
-	        android:text="@string/default_str"/>
-	</LinearLayout>
-	<ImageView 
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:src="@drawable/next_icon"/>
-</LinearLayout>
+    <LinearLayout 
+    	android:layout_width="match_parent"
+    	android:layout_height="@dimen/rankitem_height"
+    	android:orientation="horizontal" 
+    	android:gravity="center_vertical">
+	    <ImageView 
+		    android:id="@+id/id_img"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:src="@drawable/pic5_icon"/>
+		    
+		<LinearLayout 
+		    android:layout_width="0dp"
+		    android:layout_height="match_parent"
+		    android:layout_weight="1"
+		    android:layout_marginLeft="10dp"
+		    android:orientation="vertical">
+		    <TextView 
+		        android:id="@+id/id_name"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="5dp"
+		        android:textColor="@color/black"
+		        android:textSize="17sp"
+		        android:text="@string/default_str"/>
+		    <TextView 
+		        android:id="@+id/id_autor"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="8dp"
+		        android:textColor="@color/gray_6"
+		        android:textSize="13sp"
+		        android:text="@string/default_str"/>
+		    <TextView 
+		        android:id="@+id/id_state"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="6dp"
+		        android:textColor="@color/gray_6"
+		        android:textSize="13sp"
+		        android:text="@string/default_str"/>
+		    <LinearLayout 
+		        android:id="@+id/id_comment"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="6dp"
+		        android:orientation="horizontal">
+		        <ImageView 
+		            android:id="@+id/id_star1"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/star_full"/>
+		        <ImageView 
+		            android:id="@+id/id_star2"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/star_full"/>
+		        <ImageView 
+		            android:id="@+id/id_star3"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/star_full"/>
+		        <ImageView 
+		            android:id="@+id/id_star4"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/star_full"/>
+		        <ImageView 
+		            android:id="@+id/id_star5"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:src="@drawable/star_full"/>
+		    </LinearLayout>
+		</LinearLayout>
+		<ImageView 
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="right|center_vertical"
+		    android:layout_marginRight="20dp"
+		    android:src="@drawable/next_icon"/>    
+    </LinearLayout>
+	
+</FrameLayout>
